[package]
name = "wleave"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "A Wayland-native logout script written in Gtk3"
repository = "https://github.com/AMNatty/wleave"

[workspace]
members = [".", "completions_gen"]

[dependencies]
clap = { version = "4.1", features = ["derive"] }

thiserror = "2"
miette = { version = "7", features = ["derive", "fancy"] }

dirs = "6.0"
gtk = "0.18"
gtk-layer-shell = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
