[package]
name = "wleave"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "A Wayland layer-shell logout prompt written in GTK"
repository = "https://github.com/AMNatty/wleave"

[workspace]
members = [".", "completions_gen"]

[dependencies]
clap = { version = "4.1", features = ["derive"] }

thiserror = "2"
miette = { version = "7", features = ["derive", "fancy"] }

dirs = "6.0"
glib = "0.20"
glib-macros = "0.20"
gtk4 = { version = "0.9", features = ["gnome_43"] }
gtk4-layer-shell = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
