[package]
name = "wleave"
version = "0.7.0"
edition = "2024"
license = "MIT"
description = "A Wayland layer-shell logout prompt written in GTK"
repository = "https://github.com/AMNatty/wleave"

[workspace]
members = [".", "completions_gen"]

[dependencies]
clap = { version = "4.1", features = ["derive"] }

thiserror = "2"
miette = { version = "7", features = ["derive", "fancy"] }

cfg-if = "1"

dirs = "6.0"
cairo-rs = "0.20"
glib = "0.20"
glib-macros = "0.20"
libadwaita = { version = "0.7", features = ["v1_7"] }
librsvg = "~2.60"
gdk4 = { version = "0.9", features = ["v4_18"] }
gtk4 = { version = "0.9", features = ["gnome_45"] }
gtk4-layer-shell = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
